adding middleware and jwt authentication
