# ses3/infrastructure/inventory/controller_delete_book.go
@@ -11,13 +11,13 @@ import (
 // @Tags inventory-controller
 // @Summary Inventory
 // @Description Put all mandatory parameter
-// @Param X-Username header string true "guest" default(guest)
+// @Param X-Token header string true "token" default(token)
 // @Param Accept-Language header string true "EN" default(EN)
 // @Param id path string true "objectId"
 // @Accept json
 // @Produce json
 // @Success 200
-// @Router /inventory/book/delete/{id} [delete]
+// @Router /book-store/inventory/book/delete/{id} [delete]
 func (c *Controller) DeleteBook(ec echo.Context) error {
 	var (
 		ctx = context.Background()
