# ses3/shared/dto/member/user_request.go
@@ -1,0 +1,8 @@
+package member
+
+type (
+	UserReq struct {
+		Username string `json:"username" validate:"required"`
+		Password string `json:"password" validate:"required"`
+	}
+)
